[tool.poetry]
classifiers = ["Private :: Do not Upload"]
name = "devenv-python-gdal"
version = "9.9.9"
description = ""
authors = []
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.11"
GDAL = "3.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
